<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">WiFi Camera Viewer</string>
    <string name="label_file_browser">File Browser</string>
    <string name="label_camera_control">Camera Control</string>
    <string name="label_network_configurations">Network Configurations</string>
    <string name="label_camera_settings">Camera Settings</string>
    <string name="label_video_resolution">Video Resolution</string>
    <string name="label_image_resolution">Image Resolution</string>
    <string name="label_motion_detection">Motion Detection</string>
    <string name="label_on">On</string>
    <string name="label_off">Off</string>
    <string name="label_flicker_frequency">Flicker Frequency</string>
    <string name="label_50Hz">50Hz</string>
    <string name="label_60Hz">60Hz</string>
    <string name="label_white_balance">White Balance</string>
    <string name="label_auto">Auto</string>
    <string name="label_daylight">Daylight</string>
    <string name="label_fluorescent">Fluorescent</string>
    <string name="label_brightness">Brightness</string>
    <string name="label_contrast">Contrast</string>
    <string name="label_exposure">Exposure</string>
    <string name="label_ip_camera_control">Camera Control</string>
    <string name="label_ip_camera_preview">Camera Preview</string>
    <string name="label_ip_camera_browser">Camera File Browser</string>
    <string name="label_local_album">Local Album</string>
    <string name="label_wifi_ssid">WiFi Camera AP SSID</string>
    <string name="label_wifi_sta_ssid">WiFi Camera STA SSID</string>
    <string name="label_encryption_key">Encryption Key</string>
    <string name="label_update">Update</string>
    <string name="label_re_activate_network">Re-activate Network</string>
    <string name="label_find_camera">Find Camera</string>
    <string name="label_title">Title</string>
    <string name="label_time0">0:00</string>
    <string name="label_app_snapshot">App Snapshot</string>
    <string name="label_camera_switchtofront">Camera-Front</string>
    <string name="label_camera_switchtorear">Camera-Rear</string>
    <string name="label_app_record">App Record</string>
    <string name="label_stop_record">Stop Recording</string>
    <string name="dialog_no_connection_title">Please check your WiFi setup:</string>
    <string name="dialog_no_connection_message">1. Make sure camera\'s WiFi is turned on.\n2. Make sure device\'s WiFi is turned on.\n3. Connect to your camera\'s network.</string>
    <string name="label_ok">OK</string>
    <string name="label_cancel">Cancel</string>
    <string name="label_open">Open</string>
    <string name="label_save">Save</string>
    <string name="label_delete">Delete</string>
    <string name="label_connect">Connect</string>
    <string name="label_video">Video</string>
    <string name="label_image">Image</string>
    <string name="label_camera_snapshot">Camera Snapshot</string>
    <string name="label_camera_record">Camera Record</string>
    <string name="label_camera_stop_record">Camera Stop Recording</string>
    <string name="label_camera_language">Language</string>
    <string name="message_command_succeed">Command Succeed!</string>
    <string name="message_command_failed">Command Failed!</string>
    <string name="message_fail_get_info">Failed to get camera information.</string>
    <string name="error_no_ssid">Please enter WiFi SSID.</string>
    <string name="error_ssid_too_long">SSID is too long.</string>
    <string name="error_no_key">Please enter encryption key.</string>
    <string name="error_key_too_short">Key is too short.</string>
    <string name="error_key_too_long">Key is too long.</string>
    <string name="label_language">Language</string>
    <string name="label_default">System Default</string>
    <string name="label_reading">Reading</string>
    <string name="label_items">items</string>
    <string name="message_save_video">Video files will be stored in local storage under directory</string>
    <string name="message_start_recording">Start Video Recording</string>
    <string name="label_language_TChinese">繁體中文</string>
    <string name="label_language_SChinese">简体中文</string>
    <string name="label_language_Russian">Русский</string>
    <string name="label_language_Spanish">español</string>
    <string name="label_language_Portuguese">português</string>
    <string name="label_language_French">français</string>
    <string name="label_language_Italian">italiano</string>
    <string name="label_language_Germany">Deutsch</string>
    <string name="label_language_Czech">čeština</string>
    <string name="label_language_Japanese">日本語</string>
    <string name="label_language_Korean">한국의</string>
    <string name="label_language_Latvian">Latvijas</string>
    <string name="label_language_Polish">polski</string>
    <string name="label_language_Romanian">român</string>
    <string name="label_language_Slovak">slovenský</string>
    <string name="label_language_Ukrainian">Український</string>
    <string name="app_Version">APP Version</string>
    <string name="FW_Version">Firmware Version</string>
    <string name="label_delete_files">Delete Files</string>
    <string name="AWB_Auto">Auto</string>
    <string name="AWB_Daylight">Daylight</string>
    <string name="AWB_Cloudy">Cloudy</string>
    <string name="AWB_Fluorescent_W">Fluorescent (White)</string>
    <string name="AWB_Fluorescent_N">Fluorescent (Natural)</string>
    <string name="AWB_Fluorescent_D">Fluorescent (Daylight)</string>
    <string name="AWB_Incandescent">Incandescent</string>
    <string name="Delete_Current_File">Delete current file</string>
    <string name="Delete_All_Images">Delete all images</string>
    <string name="Delete_All_Videos">Delete all videos</string>
    <string name="label_Off">Off</string>
    <string name="label_Low">Low</string>
    <string name="label_Middle">Middle</string>
    <string name="label_High">High</string>
    <string name="Flicker_50">50 Hz</string>
    <string name="Flicker_60">60 Hz</string>
    <string name="dialog_DHCP_error">Please check your DHCP setup</string>
    <string name="Timesettings">Time Settings</string>
    <string name="SyncDevice">Synchronized with the device</string>
    <!-- RTSP on TCP/UDP -->
    <string name="Previewsettings">RTSP Settings</string>
    <string name="label_Close">Close</string>
    <string name="label_net_disconnected">Network disconnected</string>
    <string name="Fileupload">File Upload</string>
    <string name="Uploadbutton">Start upload</string>
    <string name="AdasCalibratebutton">Adas Setting</string>
    <string name="AdasCalibratebuttonDone">Adas Save</string>
    <!-- IP cam Test -->
    <string name="label_Ipcam_title">IP Cam</string>
    <string name="label_Ipcam_stop">Stop Stream</string>
    <string name="label_Ipcam_discovery">Discovering....</string>
    <!-- Drone cam Test -->
    <string name="label_Dronecam_title">Drone Cam</string>
    <string name="label_Dronecam_lostrtsp">RTSP Connect Failed</string>
    <!-- Auto Test -->
    <string name="label_Autotest_title">AutoTest</string>
    <!-- File lock -->
    <string name="label_file_locked">Some files protected</string>
    <!-- Download file -->
    <string name="label_dowload_success">download success</string>
    <string name="label_dowload_failed">download failed</string>
    <string name="label_dowload_cancel">download cancel</string>
    <string name="label_dowload_event">Great Video</string>
    <!-- SD Error -->
    <string name="label_sd_error">Please check SD card</string>
    <string name="label_record_need">Please start record</string>
</resources>